--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
       "@config/*": ["config/*"],
       "@entities/*": ["domain/entities/*"],
       "@services/*": ["domain/services/*"],
-      "@repositories/*": ["domain/repositories/*"]
+      "@repositories/*": ["infrastructure/repositories/*"]
     },
     "resolveJsonModule": true,
     "sourceMap": true,
