--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "module-alias": "^2.2.3",
+    "mongoose": "^8.4.4",
+    "nodemon": "^3.1.3",
     "openai": "^4.48.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
@@ -41,7 +43,8 @@
     "@routes": "./src/routes",
     "@config": "./src/config/",
     "@domain": "./src/domain/entities/",
-    "@services": "./src/domain/services/",
-    "@repositories": "./src/domain/repositories/"
+    "@services": "./src/application/services/",
+    "@repositories": "./src/domain/repositories/",
+    "@infrastructure": "./src/infrastructure/"
   }
 }
