--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "module-alias": "^2.2.3",
     "mongoose": "^8.4.4",
     "nodemon": "^3.1.3",
-    "openai": "^4.48.1",
+    "openai": "^4.52.7",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2",
@@ -42,7 +42,7 @@
     "@root": ".",
     "@routes": "./src/routes",
     "@config": "./src/config/",
-    "@domain": "./src/domain/entities/",
+    "@entities": "./src/domain/entities/",
     "@services": "./src/application/services/",
     "@repositories": "./src/domain/repositories/",
     "@infrastructure": "./src/infrastructure/"
