refactor open ai service

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
 PORT=8080
 PEPE="PEPE"
-OPEN_AI_KEY="sk-proj-h712IDjgPyvTQkx1KXsCT3BlbkFJjDmfzlgexXhGalfnXge6"
+OPENAI_API_KEY="sk-proj-h712IDjgPyvTQkx1KXsCT3BlbkFJjDmfzlgexXhGalfnXge6"
 ENV_2="ENV_2"
