--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,21 @@
-version: '3'
-
 services:
-  app:
-    build: .
+#  app:
+#    build: .
+#    ports:
+#      - "3000:3000"
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.13.4
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - xpack.ml.enabled=true
+      - xpack.security.transport.ssl.enabled=false
+      - ES_JAVA_OPTS=-Xms2g -Xmx2g
     ports:
-      - "3000:3000"
+      - 9200:9200
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+
+volumes:
+  esdata:
