--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "author": "Gonzalo Sergio Zago",
   "license": "ISC",
   "dependencies": {
+    "@elastic/elasticsearch": "8",
+    "@langchain/core": "^0.3.62",
+    "@langchain/openai": "^0.5.17",
     "axios": "^1.5.1",
     "config-yml": "^0.10.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
+    "langchain": "^0.3.29",
     "module-alias": "^2.2.3",
     "mongoose": "^8.4.4",
     "nodemon": "^3.1.3",
